Fixed flex overflow bug, mobile improvements

--- a/modules/output-number.css
+++ b/modules/output-number.css
@@ -36,8 +36,8 @@ p {
         border: 1px solid #ccc;
         width: 100%;
         box-sizing: border-box;
-        margin: 3%;
-        padding: 1%;
+        margin: 1vw;
+        padding: 3vw;
         border-radius: 5px;
     }
 
